--- a/28. IA-platform/src/components/Header/style.css
+++ b/28. IA-platform/src/components/Header/style.css
@@ -7,7 +7,7 @@ header {
 }
 
 h1 {
-  margin-top: 2.4rem;
+  margin-top: 0.5rem;
   color: var(--gray-01);
   font-weight: 600;
   font-size: 3.2rem;
