--- a/28. IA-platform/src/styles/global.css
+++ b/28. IA-platform/src/styles/global.css
@@ -22,27 +22,37 @@
   background-position: center;
   background-size: cover;
   font-family: 'IBM Plex Sans', sans-serif;
+  overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
+
   border-radius: 3.2rem;
   border: 0.1rem solid var(--gray-04, #334155);
   background: rgba(2, 6, 23, 0.8);
-  padding: 6rem;
-  width: 80%;
+  padding: 2rem 6rem;
+  width: 70%;
   height: fit-content;
 }
 
 .main {
   width: 80%;
-  margin: 4rem 0;
+  margin: 1rem 0;
   display: flex;
   flex-direction: column;
-  gap: 1.6rem;
+  gap: 1rem;
 }
 
 .divider {
+  margin: 1.5rem 0;
   width: 100%;
   height: 0.1rem;
   background-color: var(--gray-04);
@@ -53,12 +63,10 @@
   padding: 1.2rem;
   border-radius: 1.6rem;
   transition: all 0.2s ease;
-}
 
-.flex {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 button:hover,
